Fix config cache tests